--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: minima
 title: 我的技术博客
 description: 记录学习与分享
+permalink: /:year/:month/:day/:title/
+collections:
+  posts:
+    output: true
+    
